--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ decorator==5.1.1
 Django==4.1.3
 django-extensions==3.2.1
 executing==1.2.0
+gunicorn==20.1.0
 ipython==8.6.0
 jedi==0.18.1
 matplotlib-inline==0.1.6
